--- a/src/LabAPI.Api/LabAPI.Api.csproj
+++ b/src/LabAPI.Api/LabAPI.Api.csproj
@@ -8,7 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Middlewares\" />
+    <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LabAPI.Application\LabAPI.Application.csproj" />
+    <ProjectReference Include="..\LabAPI.Infrastructure\LabAPI.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
