--- a/src/LabAPI.Domain/LabAPI.Domain.csproj
+++ b/src/LabAPI.Domain/LabAPI.Domain.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
