Create Test Endpoint Created Test Repository Registered Mediator, Mapper

--- a/src/LabAPI.Application/LabAPI.Application.csproj
+++ b/src/LabAPI.Application/LabAPI.Application.csproj
@@ -11,10 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\" />
     <Folder Include="Features\Orders\Commands\" />
     <Folder Include="Features\Orders\Queries\" />
-    <Folder Include="MappingProfiles\" />
+    <Folder Include="Features\Tests\Queries\" />
   </ItemGroup>
 
   <ItemGroup>
