Add Create OrderResult

--- a/src/LabAPI.Application/LabAPI.Application.csproj
+++ b/src/LabAPI.Application/LabAPI.Application.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Common\" />
+    <Folder Include="Features\OrderResults\Queries\" />
   </ItemGroup>
 
 </Project>
