--- a/src/LabAPI.Infrastructure/LabAPI.Infrastructure.csproj
+++ b/src/LabAPI.Infrastructure/LabAPI.Infrastructure.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="AzureAutoNumber" Version="1.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.3" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.38.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.3" />
