--- a/src/LabAPI.Application/LabAPI.Application.csproj
+++ b/src/LabAPI.Application/LabAPI.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LabAPI.Infrastructure\LabAPI.Infrastructure.csproj" />
     <ProjectReference Include="..\LabAPI.Domain\LabAPI.Domain.csproj" />
   </ItemGroup>
 
