--- a/src/LabAPI.Infrastructure/LabAPI.Infrastructure.csproj
+++ b/src/LabAPI.Infrastructure/LabAPI.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LabAPI.Application\LabAPI.Application.csproj" />
+    <ProjectReference Include="..\LabAPI.Domain\LabAPI.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
